# threed2vox

./: .gitignore  Cargo.toml  README.md  benchmark.sh  benchmark_par.sh  minecraft_versions.toml
.github/workflows/: clippy-check.yml  cross-compile.yml
models/: teapot.dae  teapot.glb  teapot.gltf
src/: config.rs  lib.rs  nbt_helper.rs  nbtifier.rs  voxel_grid.rs
src/readers/: dae.rs  gltf.rs  mod.rs  obj.rs  reader.rs  stl.rs
