[package]
name = "threed2vox"
version = "0.1.0"
authors = ["Skye Im <skye.im@nyu.edu>"]
edition = "2018"

[profile.dev]
opt-level = 1

[target.x86_64-apple-darwin]
linker = "x86_64-apple-darwin14-clang"
ar = "x86_64-apple-darwin14-ar"

[[bin]]
name = "threed2vox"
path = "src/bin/main.rs"

[[bin]]
name = "tester"
path = "src/bin/tester.rs"

[[bin]]
name = "bench_teapot"
path = "src/bin/bench_teapot.rs"
required-features = ["sequential"]

[[bin]]
name = "bench_teapot_par"
path = "src/bin/bench_teapot.rs"

[dependencies]
anyhow = "1.0.32"
clap = "2.33.0"
hematite-nbt = "0.5.0"
log = "0.4.11"
maplit = "1.0.2"
nalgebra = "^0.24.1"
num_cpus = "1.13.0"
parry3d = "^0.1.2"
rayon = "1.4.0"
serde = "1.0.115"
simplelog = "0.8.0"
strsim = "0.10.0"
tobj = { version = "2.0.3", features=["log"] }
toml = "0.5.6"

[features]
sequential = []